# transformerkp

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  setup.py
docs/: getting-started.md  index.md
docs/how-to-guides/: keyphrase-data.md
docs/reference/data/: base.md  dataset_loader_factory.md  dataset_loaders.md  preprocessing.md  registry.md
docs/reference/data/extraction/: ke_data_args.md  ke_datasets.md
docs/reference/data/generation/: kg_data_args.md  kg_datasets.md
docs/tutorials/: identifying-keyphrases-from-text.md
examples/extraction/: train_eval_ke_model.py
examples/generation/: train_eval_kg_model.py
getting-started/: index.html
how-to-guides/: index.html
how-to-guides/keyphrase-data/: index.html
reference/data/base/: index.html
reference/data/dataset_loader_factory/: index.html
reference/data/dataset_loaders/: index.html
reference/data/extraction/ke_data_args/: index.html
reference/data/extraction/ke_datasets/: index.html
reference/data/generation/kg_data_args/: index.html
reference/data/generation/kg_datasets/: index.html
reference/data/registry/: index.html
src/transformerkp/data/: base.py  dataset_loader_factory.py  dataset_loaders.py  extraction.py  preprocessing.py  registry.py  test.py
src/transformerkp/data/extraction/: args.py  ke_data_args.py  ke_data_loader.py  ke_datasets.py  (+1 more)
src/transformerkp/generation/: args.py  data_collators.py  generator.py  models.py  trainer.py
src/transformerkp/metrics/: __init__.py  metrics.py
src/transformerkp/tagger/: __init__.py  args.py  constants.py  crf.py  data_collators.py  models.py  tagger.py  train_eval_kp_tagger.py  trainer.py  utils.py
tests/: test_ke_data.py  test_kg_data.py
tests/resources/data/: test.csv  test.json  train.csv  train.json  valid.csv  valid.json
tutorials/identifying-keyphrases-from-text/: index.html
(+14 files in other folders)
