[metadata]
name = transformerkp
version = 0.0.1
url = https://github.com/Deep-Learning-for-Keyphrase/transformerkp
author = 'Debanjan Mahata, Amardeep Kumar'
author_email = 'debanjanmahata85@gmail.com, KUMARAMARDIPSINGH@gmail.com'
description = "Deep learning framework for transformer based keyphrase extraction and generation"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*
